--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,4 +11,5 @@ include_directories( ./src )
 add_executable(convex-hull
                 ./src/main.cpp
                 ./src/primitives.cpp
+                ./src/GrahamScan.cpp
             )
