Jarvis March: Add algorithm.
Needs to be polished for edge cases.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,4 +12,5 @@ add_executable(convex-hull
                 ./src/main.cpp
                 ./src/primitives.cpp
                 ./src/GrahamScan.cpp
+                ./src/JarvisMarch.cpp
             )
